# data_agent

./: .env  .gitignore  20250715 数据.xlsx  README.md  langgraph.json  pyproject.toml
frontend/src/components/thread/: ContentBlocksPreview.tsx  MultimodalPreview.tsx  index.tsx
frontend/src/hooks/: use-file-upload.tsx
frontend/src/lib/: multimodal-utils.ts
project_document/: [001]增强文件读取和图片生成工具.md  [001]添加文件读取和图片优化工具.md
src/agents/: 20250111.csv  graph.py
tests/: test_anthropic.py  test_number.py
